# MockLib

./: CMakeLists.txt  README.md
include/: minder.hh  scopeguard.hh  smallvec.hh  timer.hh
src/: main.cc
